<resources>
    <string name="app_name">UWI Community</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_safety">Safety</string>
    <string name="imagebutton1desc">Navigates to the safety actvity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_emergency_contact">Emergency Contact</string>
    <string name="ec_info">Below are Emergency Contact information, click to call if needed. </string>
    <string name="title_activity_escort">Escort</string>
    <string name="abortBtn">ABORT</string>
    <string name="panicBtn">Panic</string>
    <string name="escortInstr">Ensure Location is on &amp; push to start\nTap again to extend timer\n If timer is not aborted the Campus Police will be contacted
        &amp; location sent\nPress Panic for Emergency</string>
    <string name="wlkbddyBtn">Find a Walk Buddy</string>

    <string name="yesP">Yes</string>
    <string name="noP">No</string>
    <string name="uwiID">ID Number</string>

    <string name="destinationList">
        <item>Bus Route- 1st North Gate</item>
        <item>South Gate- Gate Boys Direction</item>
    </string>

    <string name="meetUpList">
        <item>Bus Route- 1st North Gate</item>
        <item>South Gate- Gate Boys Direction</item>
    </string>
    <string name="submit">Submit</string>
    <string name="meetUp">Meet Location:</string>
    <string name="dest">Destination</string>
    <string name="canP">Cancel</string>
    <string name="okP">Ok</string>
    <string name="done">Done</string>
    <string name="verifySubmit">Are you sure you want to submit?</string>
    <string name="uploadPicQuest">Do you have photographic evidence?</string>
    <string name="cDescript">Enter a short description on any additional information you may have.\n\n(Max:200)</string>
    <string name="title_activity_maps">Map</string>
    <string name="escortBtnTxt">Place\nThumb\nHere</string>
    <string name="addpic">Add Picture</string>
    <string name="addvid">Add Video</string>
    <string name="addaudio">Add Audio</string>
    <string name="oldpass">Old Password:</string>
    <string name="enteroldpass">Enter Old Password</string>
    <string name="newpass">New Password:</string>
    <string name="enternewpass">Enter New Password</string>
    <string name="reset">Reset</string>
    <string name="passStrength">Password Strength:</string>
    <string name="notEntered">Not Entered</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="strong">STRONG</string>
    <string name="changepass">Change Password?</string>
    <string name="maxlength_strong">STRONG|Max Length</string>
    <string name="maxlength_med">MEDIUM|Max Length</string>
    <string name="maxlength">Max Length</string>
    <string name="alerting_police">Alerting\nCampus\nPolice</string>
    <string name="title_activity_medical_contact">MedicalContact</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="event_title">Title</string>
    <string name="event_date">Event Date (YYYY/MM/DD)</string>
    <string name="calBtn">Select</string>
    <string name="phonenum">Contact Details</string>
    <string name="uploadPicEvent">Do you have a flyer/post for the event?</string>
</resources>
