<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.megan.uwicommunity.ChangePassword"
    android:orientation="vertical"
    android:background="#ECEFF1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldpass"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enteroldpass"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:id="@+id/oldpassword"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpass"
            android:textStyle="bold"
            android:padding="2dp"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enternewpass"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:id="@+id/newpassword"
            android:maxLength="15"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B8FFB8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passStrength"
            android:padding="5dp"
            android:visibility="gone"
            android:textColor="@color/blueB"

            android:id="@+id/passStrengthLabel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/passStrengthIndicator"
            android:textStyle="bold"
            android:padding="5dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@drawable/submit_reset"
        android:id="@+id/submit_reset"/>

</LinearLayout>
