<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.megan.uwicommunity.UploadEvent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title"
                android:layout_marginTop="5dp"
                android:id="@+id/eTitle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phonenum"
                android:layout_marginTop="15dp"
                android:id="@+id/ephoneNum"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dobLayout"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eDate"
                    android:inputType="date"
                    android:hint="@string/event_date"
                    android:singleLine="true"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/calendarBtn"
                    android:text="@string/calBtn"
                    style="?android:attr/buttonStyleSmall"
                    android:textSize="13sp"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:typeface="serif"/>

            </LinearLayout>

            <!-- Picture Upload section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadPicEvent"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/uploadPicChoice"
                android:layout_marginBottom="10dp"
                android:padding="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesP"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noP"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description: "
                android:textColor="@color/black"
                android:textSize="16sp"
                android:typeface="serif"
                android:textStyle="bold|italic"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:maxLines="500"
                android:inputType="textMultiLine"
                android:background="@drawable/text_border"
                android:padding="10dp"
                android:textSize="14sp"
                android:gravity="top"
                android:layout_marginBottom="30dp"
                android:hint="Type short description here..."
                android:id="@+id/desc"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
