<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="20dp"
    tools:context="com.example.megan.uwicommunity.QuickReport"
    android:orientation="vertical"
    android:background="#303030">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description: "
            android:textColor="@color/white"
            android:textSize="16sp"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:maxLines="500"
            android:inputType="textMultiLine"
            android:background="@drawable/text_border"
            android:padding="10dp"
            android:textSize="14sp"
            android:gravity="top"
            android:layout_marginBottom="30dp"
            android:hint="Type short description here..."/>

     <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edges_button"
        android:text="@string/addpic"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
         android:id="@+id/addpicbtn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edges_button"
        android:text="@string/addvid"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:id="@+id/addvidbtn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edges_button"
        android:text="@string/addaudio"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:id="@+id/addaudbtn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Push\nto\nReport"
            android:background="@drawable/quick_button"
            android:padding="7dp"
            android:textStyle="bold|italic"
            android:textSize="18sp"
            android:id="@+id/submitBtn"/>

    </LinearLayout>
    </ScrollView>




</LinearLayout>
